@@ -1,0 +1,4 @@
+%Error: Specified --top-module 'notfound' was not found in design.
+        ... Suggested alternative: 'notfound1'
+        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
+%Error: Exiting due to
